--- a/serverless.yml
+++ b/serverless.yml
@@ -227,6 +227,8 @@ functions:
     environment:
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
+      TWILIO_ACCESS_TOKEN:  ${file(./config/${opt:stage}.json):TWILIO_ACCESS_TOKEN}
+      TWILIO_SECTRET_KEY:  ${file(./config/${opt:stage}.json):TWILIO_SECTRET_KEY}
   DataCreditoScraper:
     handler: AutomationServices/DataCreditoScraper/scraper.start
     name: AutomationServices-DataCreditoScraper-${opt:stage}
