Fixing cron rates.

--- a/serverless.yml
+++ b/serverless.yml
@@ -208,19 +208,20 @@ functions:
     environment:
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
+
   PaymentsAnalizer:
     handler: AutomationServices/AnalizerTask/analizer.start
     name: AutomationServices-AnalizerTasks-${opt:stage}
     events:
       - schedule:
           description: "Runs every month"
-          rate: cron(0 0 1 * *) # First day of the month
+          rate: cron(0 0 1 * ? *) # First day of the month
           enabled: true
           input: 
             ExecutionType: "MONTHLY"
       - schedule:
           description: "Runs every sunday"
-          rate: cron(0 0 * * 6) # First day of the month
+          rate: cron(0 0 ? * SUN *) 
           enabled: true
           input:
             ExecutionType: "WEEKLY"
@@ -229,6 +230,7 @@ functions:
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
       TWILIO_ACCESS_TOKEN:  ${file(./config/${opt:stage}.json):TWILIO_ACCESS_TOKEN}
       TWILIO_SECTRET_KEY:  ${file(./config/${opt:stage}.json):TWILIO_SECTRET_KEY}
+
   DataCreditoScraper:
     handler: AutomationServices/DataCreditoScraper/scraper.start
     name: AutomationServices-DataCreditoScraper-${opt:stage}
