--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,6 +1,6 @@
+
+
 #amplify
-amplify/*
-amplify/
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/logs
@@ -14,6 +14,7 @@ node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
+amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
