--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.910.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "chrome-aws-lambda": "^5.5.0",
