--- a/serverless.yml
+++ b/serverless.yml
@@ -198,11 +198,15 @@ functions:
     handler: AutomationServices/AutoMailChecker/checker.start
     name: AutomationServices-EmailChecker-${opt:stage}
     events:
-      - schedule:
-          # name: "cw-start-email-checker"
+      - schedule: ## DEPRECATED
           description: "Function to connecto to Gmail :D"
           rate: rate(20 minutes)
-          enabled: true
+          enabled: false 
+      - sqs: 
+          arn:
+            Fn::GetAtt:
+              - EmailUsersQueue
+              - Arn
     environment:
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
@@ -265,13 +269,6 @@ functions:
     environment: 
       USER_SCHEDULE_SQS_URL: 
         Ref: EmailUsersQueue
-
-    # events: 
-    #   - sqs: 
-    #     arn: 
-    #       Fn::GetAtt:
-    #         - EmailUsersQueue
-    #         - Arn
 
 resources:
   Resources:
