--- a/serverless.yml
+++ b/serverless.yml
@@ -113,7 +113,7 @@ functions:
               - sub
   UpdateEmailCredentials:
     handler: API/Functions/Users.updateEmailSourceCredentials
-    name: StatsRepo-get-${opt:stage}
+    name: UpdateEmailCredentials-put-${opt:stage}
     events:
       - http:
           path: /user/settings/email  
