--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mailparser": "^2.7.7",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "mongoose-autopopulate": "^0.14.0",
     "puppeteer-core": "^5.5.0",
     "twilio": "^3.39.1"
   },
