--- a/serverless.yml
+++ b/serverless.yml
@@ -33,7 +33,15 @@ provider:
     MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
     MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
     MONGO_SSL: true
-
+  iam: 
+    role: 
+      statements: 
+        - Effect: 'Allow' 
+          Action: '*'
+          Resource:
+            Fn::GetAtt:
+              - EmailUsersQueue
+              - Arn
 functions:
   TwilioIncommingMessage:
     handler: AutomationServices/WhatsAppBot/handlerIncommingMessage.handler
