Alerts to UI and role to SQS function

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,7 @@
 service: personal-interface
 plugins:
   - serverless-offline
+  - serverless-iam-roles-per-function
 
 package:
   exclude:
@@ -11,7 +12,7 @@ package:
 
 custom: 
   ArnSQSEmails: 
-    dev: ${file(./config/${opt:stage}.json):USER_SCHEDULE_SQS_URL}
+    dev: ${file(./config/dev.json):USER_SCHEDULE_SQS_URL}
     test: 
       Ref: EmailUsersQueue
     prod: 
@@ -33,15 +34,7 @@ provider:
     MONGO_SET: ${file(./config/${opt:stage}.json):MONGO_SET}
     MONGO_USER: ${file(./config/${opt:stage}.json):MONGO_USER}
     MONGO_SSL: true
-  iam: 
-    role: 
-      statements: 
-        - Effect: 'Allow' 
-          Action: '*'
-          Resource:
-            Fn::GetAtt:
-              - EmailUsersQueue
-              - Arn
+
 functions:
   TwilioIncommingMessage:
     handler: AutomationServices/WhatsAppBot/handlerIncommingMessage.handler
@@ -337,6 +330,16 @@ functions:
   ScheduleUsersToCheckEmails:
     handler: AutomationServices/AutoMailChecker/schedule.start
     name: AutomationServices-ScheduleUsers-${opt:stage}
+    iamRoleStatementsName: write-sqs-finances-${opt:stage}-role
+    iamRoleStatements: 
+      - Effect: 'Allow'
+        Action: 
+          - 'sqs:SendMessage'
+          - 'sqs:SendMessageBatch'
+        Resource:
+          Fn::GetAtt:
+            - EmailUsersQueue
+            - Arn
     events: 
       - schedule: 
           enabled: true
