--- a/serverless.yml
+++ b/serverless.yml
@@ -9,12 +9,12 @@ package:
     - node_modules/chrome-aws-lambda/** # The function is provided by the layer
     - devutils/**
 
-custom: 
-  ArnSQSEmails: 
+custom:
+  ArnSQSEmails:
     dev: ${file(./config/${opt:stage}.json):USER_SCHEDULE_SQS_URL}
-    test: 
+    test:
       Ref: EmailUsersQueue
-    prod: 
+    prod:
       Ref: EmailUsersQueue
 
 provider:
@@ -116,7 +116,7 @@ functions:
     name: UpdateEmailCredentials-put-${opt:stage}
     events:
       - http:
-          path: /user/settings/email  
+          path: /user/settings/email
           method: PUT
           integration: lambda
           cors:
@@ -152,7 +152,7 @@ functions:
             arn: ${file(./config/${opt:stage}.json):USER_POOL_ARN}
             claims:
               - sub
-  
+
   AddBankToUser:
     handler: API/Functions/Users.addBankToUser
     name: UserRepo-banks-PUT-${opt:stage}
@@ -173,7 +173,7 @@ functions:
             arn: ${file(./config/${opt:stage}.json):USER_POOL_ARN}
             claims:
               - sub
-  GetBanks: 
+  GetBanks:
     handler: API/Functions/Banks.getBanks
     name: BanksRepo-GET-${opt:stage}
     events:
@@ -262,13 +262,12 @@ functions:
     handler: API/Functions/Users.postConfirmation
     name: PostConfirmationUser-${opt:stage}
 
-
   EmailChecker:
     handler: AutomationServices/AutoMailChecker/checker.start
     name: AutomationServices-EmailChecker-${opt:stage}
     timeout: 120
     events:
-      - sqs: 
+      - sqs:
           arn:
             Fn::GetAtt:
               - EmailUsersQueue
@@ -286,35 +285,35 @@ functions:
           description: "Runs every month"
           rate: cron(0 0 1 * ? *) # First day of the month
           enabled: true
-          input: 
+          input:
             ExecutionType: "MONTHLY"
       - schedule:
           description: "Runs every sunday"
-          rate: cron(0 0 ? * SUN *) 
+          rate: cron(0 0 ? * SUN *)
           enabled: true
           input:
             ExecutionType: "WEEKLY"
     environment:
       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
-      TWILIO_ACCESS_TOKEN:  ${file(./config/${opt:stage}.json):TWILIO_ACCESS_TOKEN}
-      TWILIO_SECTRET_KEY:  ${file(./config/${opt:stage}.json):TWILIO_SECTRET_KEY}
+      TWILIO_ACCESS_TOKEN: ${file(./config/${opt:stage}.json):TWILIO_ACCESS_TOKEN}
+      TWILIO_SECTRET_KEY: ${file(./config/${opt:stage}.json):TWILIO_SECTRET_KEY}
 
-  ##Deprecated function since DataCredito updates the backend 
-  DataCreditoScraper:
-    handler: AutomationServices/DataCreditoScraper/scraper.start
-    name: AutomationServices-DataCreditoScraper-${opt:stage}
-    memorySize: 2048 # Recomended, in MB, default is 1024
-    timeout: 60 # Recomended, in seconds, default is 6
-    events:
-      - schedule:
-          name: "cw-start-datacredito-scraper"
-          description: "Function to scraper datacredito data"
-          rate: cron(0 0 15,30 * ? *) # Every Fifteen days, some entities take a time to report updates
-          enabled: false
-    environment:
-      EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
-      SECRET_KEY: ${file(./config/${opt:stage}.json):SECRET_KEY}
+  ##Deprecated function since DataCredito updates the backend
+  # DataCreditoScraper:
+  #   handler: AutomationServices/DataCreditoScraper/scraper.start
+  #   name: AutomationServices-DataCreditoScraper-${opt:stage}
+  #   memorySize: 2048 # Recomended, in MB, default is 1024
+  #   timeout: 60 # Recomended, in seconds, default is 6
+  #   events:
+  #     - schedule:
+  #         name: "cw-start-datacredito-scraper"
+  #         description: "Function to scraper datacredito data"
+  #         rate: cron(0 0 15,30 * ? *) # Every Fifteen days, some entities take a time to report updates
+  #         enabled: false
+  #   environment:
+  #     EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
+  #     SECRET_KEY: ${file(./config/${opt:stage}.json):SECRET_KEY}
 
   HideNoAcceptedPayments:
     handler: AutomationServices/AutoHidePayments/handler.start
@@ -329,11 +328,11 @@ functions:
   ScheduleUsersToCheckEmails:
     handler: AutomationServices/AutoMailChecker/schedule.start
     name: AutomationServices-ScheduleUsers-${opt:stage}
-    events: 
-      - schedule: 
+    events:
+      - schedule:
           enabled: true
           rate: rate(20 minutes)
-    environment: 
+    environment:
       USER_SCHEDULE_SQS_URL: ${self:custom.ArnSQSEmails.${opt:stage, self:provider.stage}}
 
 resources:
