--- a/serverless.yml
+++ b/serverless.yml
@@ -263,93 +263,160 @@ functions:
     handler: API/Functions/Users.postConfirmation
     name: PostConfirmationUser-${opt:stage}
 
-  EmailChecker:
-    handler: AutomationServices/AutoMailChecker/checker.start
-    name: AutomationServices-EmailChecker-${opt:stage}
-    timeout: 120
+  #INCOMES
+  GetIncomes:
+    handler: API/Functions/Incomes.get
+    name: Incomes-GET-${opt:stage}
     events:
-      - sqs:
-          arn:
-            Fn::GetAtt:
-              - EmailUsersQueue
-              - Arn
-          batchSize: 1
-    environment:
-      EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
-      EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
+      - http:
+          path: /incomes
+          method: GET
+          integration: lambda
+          cors:
+            - enabled: true
+            - origin: "*"
+            - headers: "Access-Control-Allow-Origin"
+          response:
+            headers:
+              Access-Control-Allow-Origin: "'*'"
+          authorizer:
+            name: authorizer
+            arn: ${file(./config/${opt:stage}.json):USER_POOL_ARN}
+            claims:
+              - sub
 
-  PaymentsAnalizer:
-    handler: AutomationServices/AnalizerTask/analizer.start
-    name: AutomationServices-AnalizerTasks-${opt:stage}
+  PostIncomes:
+    handler: API/Functions/Incomes.post
+    name: Incomes-POST-${opt:stage}
     events:
-      - schedule:
-          description: "Runs every month"
-          rate: cron(0 0 1 * ? *) # First day of the month
-          enabled: true
-          input:
-            ExecutionType: "MONTHLY"
-      - schedule:
-          description: "Runs every sunday"
-          rate: cron(0 0 ? * SUN *)
-          enabled: true
-          input:
-            ExecutionType: "WEEKLY"
-    environment:
-      EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
-      EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
-      TWILIO_ACCESS_TOKEN: ${file(./config/${opt:stage}.json):TWILIO_ACCESS_TOKEN}
-      TWILIO_SECTRET_KEY: ${file(./config/${opt:stage}.json):TWILIO_SECTRET_KEY}
+      - http:
+          path: /incomes
+          method: POST
+          integration: lambda
+          cors:
+            - enabled: true
+            - origin: "*"
+            - headers: "Access-Control-Allow-Origin"
+          response:
+            headers:
+              Access-Control-Allow-Origin: "'*'"
+          authorizer:
+            name: authorizer
+            arn: ${file(./config/${opt:stage}.json):USER_POOL_ARN}
+            claims:
+              - sub
 
-  ##Deprecated function since DataCredito updates the backend
-  # DataCreditoScraper:
-  #   handler: AutomationServices/DataCreditoScraper/scraper.start
-  #   name: AutomationServices-DataCreditoScraper-${opt:stage}
-  #   memorySize: 2048 # Recomended, in MB, default is 1024
-  #   timeout: 60 # Recomended, in seconds, default is 6
-  #   events:
-  #     - schedule:
-  #         name: "cw-start-datacredito-scraper"
-  #         description: "Function to scraper datacredito data"
-  #         rate: cron(0 0 15,30 * ? *) # Every Fifteen days, some entities take a time to report updates
-  #         enabled: false
-  #   environment:
-  #     EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
-  #     SECRET_KEY: ${file(./config/${opt:stage}.json):SECRET_KEY}
-
-  HideNoAcceptedPayments:
-    handler: AutomationServices/AutoHidePayments/handler.start
-    description: "Function to hide payments not accepted after 30 days"
-    name: AutomationServices-HideNoAcceptedPayments-${opt:stage}
+  PutIncomes:
+    handler: API/Functions/Incomes.get
+    name: Incomes-PUT-${opt:stage}
     events:
-      - schedule:
-          name: "cw-hide-payments-not-accepted"
-          rate: rate(1 day)
-          enabled: true
+      - http:
+          path: /incomes/:income
+          method: PUT
+          integration: lambda
+          cors:
+            - enabled: true
+            - origin: "*"
+            - headers: "Access-Control-Allow-Origin"
+          response:
+            headers:
+              Access-Control-Allow-Origin: "'*'"
+          authorizer:
+            name: authorizer
+            arn: ${file(./config/${opt:stage}.json):USER_POOL_ARN}
+            claims:
+              - sub
 
-  ScheduleUsersToCheckEmails:
-    handler: AutomationServices/AutoMailChecker/schedule.start
-    name: AutomationServices-ScheduleUsers-${opt:stage}
-    iamRoleStatementsName: write-sqs-finances-${opt:stage}-role
-    iamRoleStatements: 
-      - Effect: 'Allow'
-        Action: 
-          - 'sqs:SendMessage'
-          - 'sqs:SendMessageBatch'
-        Resource:
-          Fn::GetAtt:
-            - EmailUsersQueue
-            - Arn
-    events: 
-      - schedule: 
-          enabled: true
-          rate: rate(20 minutes)
-    environment:
-      USER_SCHEDULE_SQS_URL: ${self:custom.ArnSQSEmails.${opt:stage, self:provider.stage}}
 
-resources:
-  Resources:
-    EmailUsersQueue:
-      Type: "AWS::SQS::Queue"
-      Properties:
-        QueueName: "email-users-checker"
-        VisibilityTimeout: 300
+
+  #AUTOMATIONS
+#   EmailChecker:
+#     handler: AutomationServices/AutoMailChecker/checker.start
+#     name: AutomationServices-EmailChecker-${opt:stage}
+#     timeout: 120
+#     events:
+#       - sqs:
+#           arn:
+#             Fn::GetAtt:
+#               - EmailUsersQueue
+#               - Arn
+#           batchSize: 1
+#     environment:
+#       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
+#       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
+
+#   PaymentsAnalizer:
+#     handler: AutomationServices/AnalizerTask/analizer.start
+#     name: AutomationServices-AnalizerTasks-${opt:stage}
+#     events:
+#       - schedule:
+#           description: "Runs every month"
+#           rate: cron(0 0 1 * ? *) # First day of the month
+#           enabled: true
+#           input:
+#             ExecutionType: "MONTHLY"
+#       - schedule:
+#           description: "Runs every sunday"
+#           rate: cron(0 0 ? * SUN *)
+#           enabled: true
+#           input:
+#             ExecutionType: "WEEKLY"
+#     environment:
+#       EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
+#       EMAIL_PASSWORD: ${file(./config/${opt:stage}.json):EMAIL_PASSWORD}
+#       TWILIO_ACCESS_TOKEN: ${file(./config/${opt:stage}.json):TWILIO_ACCESS_TOKEN}
+#       TWILIO_SECTRET_KEY: ${file(./config/${opt:stage}.json):TWILIO_SECTRET_KEY}
+
+#   ##Deprecated function since DataCredito updates the backend
+#   # DataCreditoScraper:
+#   #   handler: AutomationServices/DataCreditoScraper/scraper.start
+#   #   name: AutomationServices-DataCreditoScraper-${opt:stage}
+#   #   memorySize: 2048 # Recomended, in MB, default is 1024
+#   #   timeout: 60 # Recomended, in seconds, default is 6
+#   #   events:
+#   #     - schedule:
+#   #         name: "cw-start-datacredito-scraper"
+#   #         description: "Function to scraper datacredito data"
+#   #         rate: cron(0 0 15,30 * ? *) # Every Fifteen days, some entities take a time to report updates
+#   #         enabled: false
+#   #   environment:
+#   #     EMAIL_USERNAME: ${file(./config/${opt:stage}.json):EMAIL_USERNAME}
+#   #     SECRET_KEY: ${file(./config/${opt:stage}.json):SECRET_KEY}
+
+#   HideNoAcceptedPayments:
+#     handler: AutomationServices/AutoHidePayments/handler.start
+#     description: "Function to hide payments not accepted after 30 days"
+#     name: AutomationServices-HideNoAcceptedPayments-${opt:stage}
+#     events:
+#       - schedule:
+#           name: "cw-hide-payments-not-accepted"
+#           rate: rate(1 day)
+#           enabled: true
+
+#   ScheduleUsersToCheckEmails:
+#     handler: AutomationServices/AutoMailChecker/schedule.start
+#     name: AutomationServices-ScheduleUsers-${opt:stage}
+#     iamRoleStatementsName: write-sqs-finances-${opt:stage}-role
+#     iamRoleStatements: 
+#       - Effect: 'Allow'
+#         Action: 
+#           - 'sqs:SendMessage'
+#           - 'sqs:SendMessageBatch'
+#         Resource:
+#           Fn::GetAtt:
+#             - EmailUsersQueue
+#             - Arn
+#     events: 
+#       - schedule: 
+#           enabled: true
+#           rate: rate(20 minutes)
+#     environment:
+#       USER_SCHEDULE_SQS_URL: ${self:custom.ArnSQSEmails.${opt:stage, self:provider.stage}}
+
+# resources:
+#   Resources:
+#     EmailUsersQueue:
+#       Type: "AWS::SQS::Queue"
+#       Properties:
+#         QueueName: "email-users-checker"
+#         VisibilityTimeout: 300
