--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "handler.js",
   "scripts": {
     "debug": "node --inspect node_modules/serverless/bin/serverless offline -s dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:bot": "nodemon AutomationServices/TelegramBot/dev.js"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +25,12 @@
     "mongoose": "^5.9.25",
     "mongoose-autopopulate": "^0.14.0",
     "puppeteer-core": "^5.5.0",
+    "telegraf": "^4.3.0",
     "twilio": "^3.39.1"
   },
   "devDependencies": {
     "aws-sdk": "^2.910.0",
+    "nodemon": "^2.0.7",
     "puppeteer": "^5.5.0",
     "serverless": "^1.78.1",
     "serverless-iam-roles-per-function": "^3.2.0-e97ab49",
